directory preview fixes (#130)
- Set all cols of navigation row(first row) to - except the first col
- Fixed the issue where it scrolls right on load or when you click back
from the file preview
- Use OverlayScrollbars

--- a/frontend/app/view/csvview.less
+++ b/frontend/app/view/csvview.less
@@ -1,15 +1,12 @@
 // Copyright 2024, Command Line Inc.
 // SPDX-License-Identifier: Apache-2.0
 
+@import "../mixins.less";
+
 .csv-view {
     opacity: 0; /* Start with an opacity of 0, meaning it's invisible */
 
-    .ellipsis() {
-        display: block;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
+    .ellipsis();
 
     overflow-x: auto;
     overflow-y: hidden;
